--- a/gfarm_v2/trunk/man/ja/man1/gfhost.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFHOST" "1" "20 January 2010" "Gfarm" ""
+.TH "GFHOST" "1" "16 6цЬИ 2011" "Gfarm" ""
 
 .SH NAME
 gfhost \- gfarm е█е╣е╚┤╔═¤е│е▐еєе╔
@@ -12,10 +12,10 @@ gfhost \- gfarm е█е╣е╚┤╔═¤е│е▐еєе╔
 \fBgfhost\fR [ \fB-H\fR | \fB-l\fR | \fB-M\fR ] [ \fB-iLprUv\fR ] [ \fB-P \fIpath\fB\fR ] [ \fB-a \fIевб╝ене╞епе┴еу\fB\fR ] [ \fB-D \fIе╔еседеє╠╛\fB\fR ] [ \fB-j \fI╩┬╬є┼┘\fB\fR ] [ \fB\fIе█е╣е╚╠╛\fB\fR\fI ...\fR ]
 
 
-\fBgfhost\fR \fB-c\fR [ \fB-P \fIpath\fB\fR ] \fB-a\fIевб╝ене╞епе┴еу\fB\fR \fB-p\fIе▌б╝е╚╚╓╣ц\fB\fR [ \fB-n\fICPU┐Ї\fB\fR ] \fB\fIе█е╣е╚╠╛\fB\fR [ \fB\fIе█е╣е╚╩╠╠╛\fB\fR\fI ...\fR ]
+\fBgfhost\fR \fB-c\fR [ \fB-P \fIpath\fB\fR ] \fB-a\fIевб╝ене╞епе┴еу\fB\fR \fB-p\fIе▌б╝е╚╚╓╣ц\fB\fR [ \fB-n\fICPU┐Ї\fB\fR ] \fB\fIе█е╣е╚╠╛\fB\fR
 
 
-\fBgfhost\fR \fB-m\fR [ \fB-P \fIpath\fB\fR ] [ \fB-a\fIевб╝ене╞епе┴еу\fB\fR ] [ \fB-p\fIе▌б╝е╚╚╓╣ц\fB\fR ] [ \fB-n\fICPU┐Ї\fB\fR ] [ \fB-A\fR ] \fB\fIе█е╣е╚╠╛\fB\fR [ \fB\fIе█е╣е╚╩╠╠╛\fB\fR\fI ...\fR ]
+\fBgfhost\fR \fB-m\fR [ \fB-P \fIpath\fB\fR ] [ \fB-a\fIевб╝ене╞епе┴еу\fB\fR ] [ \fB-p\fIе▌б╝е╚╚╓╣ц\fB\fR ] [ \fB-n\fICPU┐Ї\fB\fR ] [ \fB-A\fR ] \fB\fIе█е╣е╚╠╛\fB\fR
 
 
 \fBgfhost\fR \fB-d\fR [ \fB-P \fIpath\fB\fR ] \fB\fIе█е╣е╚╠╛\fB\fR\fI ...\fR
@@ -67,30 +67,12 @@ gfhost \- gfarm е█е╣е╚┤╔═¤е│е▐еєе╔
 ╞▒══д╦еке╫е╖ечеє -p д╟бвд╜д╬е█е╣е╚д╬е▌б╝е╚╚╓╣цдЄ╗╪─ъд╣ды╔м═╫дмдвдъд▐д╣бг
 еке╫е╖ечеє -n д╟бвд╜д╬е█е╣е╚д╬ CPU ┐ЇдЄ╗╪─ъд╖д▐д╣бг╛╩╬мд╖д┐╛ь╣чд╦д╧
 1 CPU д└д╚д▀д╩д╖д▐д╣бг
-
-е█е╣е╚╠╛д╧бв░ьд─д╬е│е▐еєе╔д╟╩г┐Ї╡н╜╥д╟днд▐д╣бгд│д╬╛ь╣чбв║╟╜щд╦
-╗╪─ъд╖д┐╠╛┴░дмбвд╜д╬е█е╣е╚д╬╕╟═н╝▒╩╠╗╥д╚д╖д╞бв╩г└╜╛Ё╩єд╬┤╔═¤д╦
-═╤дддщдьд▐д╣бг╗─дъд╬е█е╣е╚╠╛д╧бвд╜д╬е█е╣е╚д╦┬╨д╣ды╩╠╠╛д╚д╖д╞
-░╖дядьд▐д╣бг
-
-двдые█е╣е╚дм╩г┐Їд╬е═е├е╚еяб╝епедеєе┐б╝е╒езб╝е╣дЄ╗¤д┴бвд╜дьд╛дьд╬
-едеєе┐б╝е╒езб╝е╣д╦╩╠б╣д╬е█е╣е╚╠╛дм│фдъ┼Ўд╞дщдьд╞ддды╛ь╣чбвд╜дьдщ
-┴┤д╞д╬едеєе┐б╝е╒езб╝е╣д╬е█е╣е╚╠╛дЄбв╕╟═н╝▒╩╠╗╥двдыддд╧╩╠╠╛д╚д╖д╞
-┼╨╧┐д╖д╞дпд└д╡ддбг
-
-д▐д┐бв/etc/hosts е╒ебедеыдф NIS д╬ hosts е╟б╝е┐е┘б╝е╣д╦┼╨╧┐д╡дьд┐
-е█е╣е╚╠╛дмбве╔еседеє╔ЇдЄ┤▐дєд╟д╩дддшджд╩╛ь╣ч (/etc/hosts дф
-NIS hosts е╟б╝е┐е┘б╝е╣д╦ FQDN дм┼╨╧┐д╡дьд╞д╩дддшджд╩╛ь╣ч) дтбв
-╔мд║е█е╣е╚д╬╩╠╠╛┼╨╧┐дм╔м═╫д╚д╩дъд▐д╣бгд│д╬дшджд╩╛ь╣чбв╕╟═н╝▒╩╠╗╥
-д╚д╖д╞е╔еседеє╠╛дЄ┤▐дре█е╣е╚╠╛ (FQDN) дЄбв╩╠╠╛д╚д╖д╞е╔еседеє╠╛дЄ
-┤▐д▐д╩дде█е╣е╚╠╛дЄ┼╨╧┐д╖д╞дпд└д╡ддбг
 .TP
 \fB-d\fR
 ░·┐Їд╦╗╪─ъд╖д┐е█е╣е╚╛Ё╩єдЄесе┐е╟б╝е┐длдщ║я╜№д╖д▐д╣бг
 ╕╜║▀д╬д╚д│дэбв╩г└╜╛Ё╩єд╚д╖д╞╗▓╛╚д╡дьд╞дддые█е╣е╚дт
 ║я╜№д╟днд╞д╖д▐ддд▐д╣дмбвд│дьдЄ╣╘д╩джд╚╩г└╜е╟б╝е┐е┘б╝е╣дм╔╘└░╣ч
 ╛ї┬╓д╚д╩д├д╞д╖д▐ддд▐д╣д╬д╟├э░╒дм╔м═╫д╟д╣бг
-е█е╣е╚╠╛д╦╗╪─ъд╟дндыд╬д╧  ╕╟═н╝▒╩╠╗╥д╬д▀д╟д╣бг
 .TP
 \fB-H\fR
 \fBgfsd\fR д╦╠фдд╣чдяд╗д╞╞└д┐╛Ё╩єбвд╣д╩дяд┴
@@ -118,7 +100,7 @@ NIS hosts е╟б╝е┐е┘б╝е╣д╦ FQDN дм┼╨╧┐д╡дьд╞д╩дддшджд╩╛ь╣ч) дтбв
 \fBgfsd\fR д╦╠фдд╣чдяд╗д╞╞└д┐╛Ё╩єбв
 д╣д╩дяд┴еэб╝е╔еве┘еьб╝е╕дкдшд╙╟з╛┌╝ъ├╩д╚бв
 есе┐е╟б╝е┐бже╡б╝е╨б╝д╦╠фдд╣чдяд╗д╞╞└д┐╛Ё╩єбв
-д╣д╩дяд┴евб╝ене╞епе┴еу╠╛бвCPU┐Їдкдшд╙е█е╣е╚╩╠╠╛дЄ
+д╣д╩дяд┴евб╝ене╞епе┴еу╠╛бвCPU┐ЇдЄ
 ┴┤д╞╔╜╝ид╖д▐д╣бгд▐д┐евепе╗е╣д╦═╤дддщдьд┐е█е╣е╚╠╛д╬╕хд╦бв
 IP еве╔еье╣дЄ│ч╕╠д╟░╧д├д╞╔╜╝ид╖д▐д╣бг
 
@@ -143,10 +125,6 @@ IP еве╔еье╣дЄ│ч╕╠д╟░╧д├д╞╔╜╝ид╖д▐д╣бг
 ╕╟═н╝▒╩╠╗╥д╚д╖д╞═╤дддщдьд╞дддые█е╣е╚╠╛дЄ╗╪─ъд╖бвесе┐е╟б╝е┐
 д╦┼╨╧┐д╡дьд╞дддые█е╣е╚╛Ё╩єдЄ╩╤╣╣д╖д▐д╣бг
 -a еке╫е╖ечеєдкдшд╙ -n еке╫е╖ечеєд╧бвд╜дьд╛дь┤√┬╕д╬├═дЄ├╓дн┤╣дид▐д╣бг
-д│дьд╦┬╨д╖бве█е╣е╚д╬╩╠╠╛д╦┤╪д╖д╞д╧бв─╔▓├дЄ░╒╠гд╖д▐д╣бг
-─╔▓├д╟д╧д╩дпбв╩╠╠╛д╬├╓дн┤╣дидф║я╜№дЄ╣╘д╩ддд┐дд╛ь╣чд╦д╧бв-A еке╫е╖ечеє
-дЄ╗╪─ъд╖д╞дпд└д╡ддбгд│д╬╛ь╣чбв┴┤д╞д╬╩╠╠╛дЄ║я╜№д╖д╞длдщбв(дтд╖двдьд╨)
-░·┐Їд╟╗╪─ъд╖д┐╩╠╠╛дЄ─╔▓├д╖д▐д╣бг
 .TP
 \fB-R\fR
 ╔╕╜р╞■╬╧длдще█е╣е╚д╦┤╪д╣ды╛Ё╩єдЄ╞╔д▀╣■д▀бвесе┐е╟б╝е┐д╦
@@ -155,10 +133,6 @@ IP еве╔еье╣дЄ│ч╕╠д╟░╧д├д╞╔╜╝ид╖д▐д╣бг
 \fB-?\fR
 ░·┐Їеке╫е╖ечеєдЄ╔╜╝ид╖д▐д╣бг
 .SH "OPTIONS"
-.TP
-\fB-A\fR
--m ╡б╟╜д╟е█е╣е╚╛Ё╩єдЄ╩╤╣╣д╣ды║▌д╦бве█е╣е╚д╬╩╠╠╛дЄ
-─╔▓├д╟д╧д╩дп├╓дн┤╣дид┐дд╛ь╣чд╦бвд│д╬еке╫е╖ечеєдЄ╗╪─ъд╖д▐д╣бг
 .TP
 \fB-a \fIевб╝ене╞епе┴еу\fB\fR
 CPUевб╝ене╞епе┴еудЄбвsparc-sun-solaris8 дф i386-redhat8.0-linux д╬
