--- a/gfarm_v2/trunk/man/man1/gfmdhost.1
+++ b/gfarm_v2/trunk/man/man1/gfmdhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFMDHOST" "1" "08 6月 2011" "Gfarm" ""
+.TH "GFMDHOST" "1" "16 6月 2011" "Gfarm" ""
 
 .SH NAME
 gfmdhost \- Gfarm metadata server host maintenance command
@@ -68,7 +68,7 @@ and "s" means a gfmd as slave only.
 \fBCluster Name\fR
 
 A cluster name where the gfmd belongs to.
-"(empty)" is displayed for the default cluster.
+"(default)" is displayed for the default cluster.
 .TP
 \fB-c\fR
 Registers the gfmd host that is specified in the argument.
