--- a/gfarm_v2/trunk/man/ja/man1/gfmdhost.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfmdhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFMDHOST" "1" "08 6æœˆ 2011" "Gfarm" ""
+.TH "GFMDHOST" "1" "16 6æœˆ 2011" "Gfarm" ""
 
 .SH NAME
 gfmdhost \- gfarm ¥á¥¿¥Ç¡¼¥¿¥µ¡¼¥Ð´ÉÍý¥³¥Þ¥ó¥É
@@ -68,7 +68,7 @@ s ¤Ï¥¹¥ì¡¼¥ÖÀìÍÑ¤Î gfmd ¤òÉ½¤·¤Þ¤¹¡£
 \fB¥¯¥é¥¹¥¿Ì¾\fR
 
 gfmd ¤¬Â°¤¹¤ë¥¯¥é¥¹¥¿Ì¾¤Ç¤¹¡£
-¥Ç¥Õ¥©¥ë¥È¤Î¥¯¥é¥¹¥¿¤Ï "(empty)" ¤ÈÉ½¼¨¤µ¤ì¤Þ¤¹¡£
+¥Ç¥Õ¥©¥ë¥È¤Î¥¯¥é¥¹¥¿¤Ï "(default)" ¤ÈÉ½¼¨¤µ¤ì¤Þ¤¹¡£
 .TP
 \fB-c\fR
 °ú¿ô¤Ç»ØÄê¤·¤¿ gfmd ¥Û¥¹¥È¤òÅÐÏ¿¤·¤Þ¤¹¡£
