--- a/gfarm_v2/trunk/man/man1/gfhost.1
+++ b/gfarm_v2/trunk/man/man1/gfhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFHOST" "1" "20 January 2010" "Gfarm" ""
+.TH "GFHOST" "1" "16 6月 2011" "Gfarm" ""
 
 .SH NAME
 gfhost \- Gfarm host maintenance command
@@ -12,10 +12,10 @@ gfhost \- Gfarm host maintenance command
 \fBgfhost\fR [ \fB-H\fR | \fB-l\fR | \fB-M\fR ] [ \fB-iLprUv\fR ] [ \fB-P \fIpath\fB\fR ] [ \fB-a \fIarchitecture\fB\fR ] [ \fB-D \fIdomain-name\fB\fR ] [ \fB-j \fIconcurrency\fB\fR ] [ \fB\fIhostname\fB\fR\fI ...\fR ]
 
 
-\fBgfhost\fR \fB-c\fR [ \fB-P \fIpath\fB\fR ] \fB-a \fIarchitecture\fB\fR \fB-p \fIport-number\fB\fR [ \fB-n \fInumber-of-CPUs\fB\fR ] \fB\fIhostname\fB\fR [ \fB\fIhost-alias\fB\fR\fI ...\fR ]
+\fBgfhost\fR \fB-c\fR [ \fB-P \fIpath\fB\fR ] \fB-a \fIarchitecture\fB\fR \fB-p \fIport-number\fB\fR [ \fB-n \fInumber-of-CPUs\fB\fR ] \fB\fIhostname\fB\fR
 
 
-\fBgfhost\fR \fB-m\fR [ \fB-P \fIpath\fB\fR ] [ \fB-a \fIarchitecture\fB\fR ] [ \fB-p \fIport-number\fB\fR ] [ \fB-n \fInumber-of-CPUs\fB\fR ] [ \fB-A\fR ] \fB\fIhostname\fB\fR [ \fB\fIhost-alias\fB\fR\fI ...\fR ]
+\fBgfhost\fR \fB-m\fR [ \fB-P \fIpath\fB\fR ] [ \fB-a \fIarchitecture\fB\fR ] [ \fB-p \fIport-number\fB\fR ] [ \fB-n \fInumber-of-CPUs\fB\fR ] [ \fB-A\fR ] \fB\fIhostname\fB\fR
 
 
 \fBgfhost\fR \fB-d\fR [ \fB-P \fIpath\fB\fR ] \fB\fIhostname\fB\fR\fI ...\fR
@@ -55,7 +55,7 @@ by the -a or -D option.
 By default, hosts are displayed in alphabetical order, but you can
 change this by the -L, -p, or -r options. Although the -L option is ignored
 in the -M function  and in the default function.
-.
+\&.
 .PP
 The following is a list of the functions of the \fBgfhost\fR
 command. You shouldn't specify more than one functions at a time.
@@ -80,27 +80,13 @@ and 1 CPU is assumed, if -n is omitted.
 You can specifiy multiple hostnames in this function.
 In that case, the first hostname is treated as the identifier of
 the host, and the host identifier is used for replication
-information management. The rest of the hostnames are used as aliases
-of the host.
-
-If a host has multiple network interfaces, and each interface
-has a unique hostname, all of the hostnames must be registered
-as either host identifiers or host aliases.
-
-If /etc/hosts or the NIS hosts database doesn't contain a DNS domain
-name part in its hostnames (i.e. these hostnames are not Fully
-Qualified Domain Names), you must register a host alias.
-In that case, you must register FQDN (a hostname which contain a
-domain name part) as the host identifier, and 
-register names without the domain part as the host alias.
+information management.
 .TP
 \fB-d\fR
 Deletes host information from metadata.
 Currently, even hosts which are referred by
 replica catalog can be deleted. But be careful, because
 such deletions cause inconsistencies of metadata.
-Only a host identifier can be used as a hostname
-in this function.
 .TP
 \fB-H\fR
 Displays load average and authentication method.
@@ -134,8 +120,7 @@ and the metadata server.
 The types of information retrieved from gfsd are load average and
 authentication method.
 And the types of information retrieved from the metadata server are
-architecture name, number of CPUs, host identifier,
-and host aliases (if any).
+architecture name, number of CPUs and host identifier.
 IP address will be displayed in parentheses just after the
 hostname used for the access to \fBgfsd\fR\&.
 
@@ -165,10 +150,6 @@ Hostnames are displayed in alphabetical order, by default.
 Modifies metadata information of the host, by specifying
 the host identifier.
 The -a and -n options overwrite the current value of each option.
-By contrast, host aliases will be added in this function by default.
-If you want to replace or delete host aliases, please specify
-the -A option with this function. In that case, all host aliases
-will be replaced by specified aliases (if any).
 .TP
 \fB-R\fR
 Restores metadata information read from standard input.
@@ -178,10 +159,6 @@ that the -M function displays.
 \fB-?\fR
 Prints usage.
 .SH "OPTIONS"
-.TP
-\fB-A\fR
-Alter. This option is used with the -m function to replace,
-rather than add, host aliases. 
 .TP
 \fB-a \fIarchitecture\fB\fR
 This option specifies the CPU architecture using a format like
