--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "08 6цЬИ 2011" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "24 6цЬИ 2011" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm└▀─ъе╒ебедеы
@@ -787,7 +787,6 @@ Gfarmепещедевеєе╚ещеде╓ещеъд╧е╒ебедеые╖е╣е╞ере╬б╝е╔дм═°═╤▓─╟╜д╦д╩дыд▐д╟╗ю╣╘дЄ╖лд
 .TP
 \fBmetadb_server_list \fIgfmdе█е╣е╚╠╛[:е▌б╝е╚╚╓╣ц]\fB \fI\&...\fB\fR
 ╛щ─╣▓╜есе┐е╟б╝е┐е╡б╝е╨д╬└▄┬│└ш░ь═ўдЄе╣е┌б╝е╣╢ш└┌дъд╟╗╪─ъд╖д▐д╣бг
-└ш╞мд╦е▐е╣е┐б╝gfmdбв2╚╓╠▄░╩╣▀д╦е╣еьб╝е╓gfmdдЄ╗╪─ъд╖д▐д╣бг
 е▌б╝е╚╚╓╣цдЄ╛╩╬мд╣дыд╚е╟е╒ейеые╚д╬601дЄ╗╪─ъд╖д┐д│д╚д╦д╩дъд▐д╣бг
 
 д│д╬╩╕д╧gfarm2.confд╬д▀д╟═н╕·д╟двдъбвgfmd.confд╟д╧╠╡╗ыд╡дьд▐д╣бг
@@ -795,7 +794,7 @@ Gfarmепещедевеєе╚ещеде╓ещеъд╧е╒ебедеые╖е╣е╞ере╬б╝е╔дм═°═╤▓─╟╜д╦д╩дыд▐д╟╗ю╣╘дЄ╖лд
 ╬у:
 
 .nf
-	metadb_server_list mdsmaster mdsslave:701
+	metadb_server_list mds1 mds2:701
 .fi
 .TP
 \fBsynchronous_replication_timeout \fI╔├┐Ї\fB\fR
