--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "24 6æœˆ 2011" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "27 6æœˆ 2011" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- GfarmÀßÄê¥Õ¥¡¥¤¥ë
@@ -797,6 +797,17 @@ Gfarm¥¯¥é¥¤¥¢¥ó¥È¥é¥¤¥Ö¥é¥ê¤Ï¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥à¥Î¡¼¥É¤¬ÍøÍÑ²ÄÇ½¤Ë¤Ê¤ë¤Þ¤Ç»î¹Ô¤ò·«¤
 	metadb_server_list mds1 mds2:701
 .fi
 .TP
+\fBmetadb_replication \fIÍ­¸úÀ­\fB\fR
+¤³¤Î¥ª¥×¥·¥ç¥ó¤¬enable¤Î¾ì¹ç¡¢¥á¥¿¥Ç¡¼¥¿¾éÄ¹²½µ¡Ç½¤¬Í­¸ú¤Ë¤Ê¤ê¤Þ¤¹¡£¥Ç¥Õ¥©¥ë¥È¤Ï disable ¤Ç¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£
+
+Îã:
+
+.nf
+	metadb_replication enable
+.fi
+.TP
 \fBsynchronous_replication_timeout \fIÉÃ¿ô\fB\fR
 ¥á¥¿¥Ç¡¼¥¿¤ÎÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¼Â¹Ô»þ¤Î¥¿¥¤¥à¥¢¥¦¥È»þ´Ö¤òÉÃÃ±°Ì¤ÇÀßÄê¤·¤Þ¤¹¡£
 ¥¿¥¤¥à¥¢¥¦¥È»þ´Ö¤ò²á¤®¤¿¾ì¹ç¡¢Æ±´üÀè¤Î¥¹¥ì¡¼¥Ögfmd¤È¤Îgfmd channel¤ÎÀÜÂ³¤ÏÀÚÃÇ¤µ¤ì¤Þ¤¹¡£
@@ -924,6 +935,7 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 		\~\~<log_message_verbose_level_statement> |
 		\~\~<profile_statement> |
 		\~\~<metadb_server_list_statement> |
+		\~\~<metadb_replication_statement> |
 		\~\~<synchronous_replication_timeout_statement> |
 		\~\~<synchronous_journaling_statement> |
 		\~\~<metadb_server_force_slave_statement> |
@@ -1004,6 +1016,7 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 	<metadb_server_list_spec> ::=
 		\~\~<hostname_port_spec> |
 		\~\~<hostname_port_spec> <metadb_server_list_spec>
+	<metadb_replication_statement> ::= "metadb_replication" <validity>
 	<synchronous_replication_timeout_statement> ::= "synchronous_replication_timeout" <number>
 	<synchronous_journaling_statement> ::= "synchronous_journaling" <validity>
 	<metadb_server_force_slave_statement> ::= "metadb_server_force_slave" <validity>
