--- a/gfarm_v2/trunk/README.ja
+++ b/gfarm_v2/trunk/README.ja
@@ -11,6 +11,7 @@
 2. インストール方法
   ソースからインストールされる場合，INSTALL.ja，
   RPM からインストールされる場合，INSTALL.RPM.ja．
+  Debian パッケージでインストールされる場合，INSTALL.Debian.ja．
 3. 設定方法
   SETUP.ja
 4. 利用方法
@@ -41,6 +42,11 @@
   INSTALL.RPM.ja (日本語)
 	RedHat Linux, Fedora Core, CentOS などで用いられている，
 	RPM バイナリパッケージからのインストール手順を説明します．
+
+- INSTALL.Debian.en (英語)
+  INSTALL.Debian.ja (日本語)
+	Debian, Ubuntu などで用いられている，
+	Debian バイナリパッケージからのインストール手順を説明します．
 
 - SETUP.en (英語)
   SETUP.ja (日本語)
