--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfmdhost.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfmdhost.1.docbook
@@ -51,12 +51,12 @@
 
 <refsect1 id='description'><title>DESCRIPTION</title>
 <para><command>gfmdhost</command> は
-gfarm のメタデータサーバの冗長化機能に関連する情報の表示や管理を行ないます。
+gfarm のメタデータサーバの冗長化機能に関連する情報の表示や管理を行います。
 <command>gfmdhost</command> が実行する機能は
--l、-c, -m, -d のオプションで選択します。
+-l, -c, -m, -d のオプションで選択します。
 これら機能の指定は排他的であり、どれか一つだけを指定することができます。
 また、一つも指定しなかった場合には、
-デフォルトの機能である gfmd ホスト名の一覧表示が行なわれます。
+デフォルトの機能である gfmd ホスト名の一覧表示が行われます。
 </para>
 </refsect1>
 
@@ -166,6 +166,13 @@ gfarm のメタデータサーバの冗長化機能に関連する情報の表示や管理を行ないます。
       <para>
         -c, -m 機能で gfmd ホストが属するクラスタ名を指定します。
 	省略した場合、デフォルトのクラスタに属します。
+      </para>
+      <para>
+	クラスタ名は同期レプリケーションのグループを表します。
+	マスター gfmd と同一のクラスタに所属する gfmd 間は同期レプリケー
+	ションとなり、それ以外の gfmd は非同期レプリケーションとなります。
+	同期レプリケーションが行われているスレーブ gfmd は、
+	メタデータ操作を失うことなくマスター gfmd に昇格することが可能です。
       </para>
     </listitem>
   </varlistentry>
