--- a/gfarm_v2/trunk/man/ja/man1/gfmdhost.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfmdhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFMDHOST" "1" "16 6цЬИ 2011" "Gfarm" ""
+.TH "GFMDHOST" "1" "31 July 2011" "Gfarm" ""
 
 .SH NAME
 gfmdhost \- gfarm есе┐е╟б╝е┐е╡б╝е╨┤╔═¤е│е▐еєе╔
@@ -22,12 +22,12 @@ gfmdhost \- gfarm есе┐е╟б╝е┐е╡б╝е╨┤╔═¤е│е▐еєе╔
 .SH "DESCRIPTION"
 .PP
 \fBgfmdhost\fR д╧
-gfarm д╬есе┐е╟б╝е┐е╡б╝е╨д╬╛щ─╣▓╜╡б╟╜д╦┤╪╧вд╣ды╛Ё╩єд╬╔╜╝идф┤╔═¤дЄ╣╘д╩ддд▐д╣бг
+gfarm д╬есе┐е╟б╝е┐е╡б╝е╨д╬╛щ─╣▓╜╡б╟╜д╦┤╪╧вд╣ды╛Ё╩єд╬╔╜╝идф┤╔═¤дЄ╣╘ддд▐д╣бг
 \fBgfmdhost\fR дм╝┬╣╘д╣ды╡б╟╜д╧
--lбв-c, -m, -d д╬еке╫е╖ечеєд╟┴к┬Єд╖д▐д╣бг
+-l, -c, -m, -d д╬еке╫е╖ечеєд╟┴к┬Єд╖д▐д╣бг
 д│дьдщ╡б╟╜д╬╗╪─ъд╧╟╙┬╛┼кд╟двдъбвд╔дьдл░ьд─д└д▒дЄ╗╪─ъд╣дыд│д╚дмд╟днд▐д╣бг
 д▐д┐бв░ьд─дт╗╪─ъд╖д╩длд├д┐╛ь╣чд╦д╧бв
-е╟е╒ейеые╚д╬╡б╟╜д╟двды gfmd е█е╣е╚╠╛д╬░ь═ў╔╜╝идм╣╘д╩дядьд▐д╣бг
+е╟е╒ейеые╚д╬╡б╟╜д╟двды gfmd е█е╣е╚╠╛д╬░ь═ў╔╜╝идм╣╘дядьд▐д╣бг
 .SH "FUNCTIONS"
 .PP
 ▓╝╡нд╧бв\fBgfmdhost\fRе│е▐еєе╔д╬╡б╟╜░ь═ўд╟д╣бг╞єд─░╩╛хд╬╡б╟╜дЄ╞▒╗■д╦
@@ -89,6 +89,12 @@ gfmd дм┬░д╣дыепеще╣е┐╠╛д╟д╣бг
 \fB-C \fIепеще╣е┐╠╛\fB\fR
 -c, -m ╡б╟╜д╟ gfmd е█е╣е╚дм┬░д╣дыепеще╣е┐╠╛дЄ╗╪─ъд╖д▐д╣бг
 ╛╩╬мд╖д┐╛ь╣чбве╟е╒ейеые╚д╬епеще╣е┐д╦┬░д╖д▐д╣бг
+
+епеще╣е┐╠╛д╧╞▒┤№еье╫еъе▒б╝е╖ечеєд╬е░еыб╝е╫дЄ╔╜д╖д▐д╣бг
+е▐е╣е┐б╝ gfmd д╚╞▒░ьд╬епеще╣е┐д╦╜ъ┬░д╣ды gfmd ┤╓д╧╞▒┤№еье╫еъе▒б╝
+е╖ечеєд╚д╩дъбвд╜дь░╩│░д╬ gfmd д╧╚є╞▒┤№еье╫еъе▒б╝е╖ечеєд╚д╩дъд▐д╣бг
+╞▒┤№еье╫еъе▒б╝е╖ечеєдм╣╘дядьд╞дддые╣еьб╝е╓ gfmd д╧бв
+есе┐е╟б╝е┐┴р║юдЄ╝║джд│д╚д╩дпе▐е╣е┐б╝ gfmd д╦╛║│╩д╣дыд│д╚дм▓─╟╜д╟д╣бг
 .TP
 \fB-p \fIе▌б╝е╚╚╓╣ц\fB\fR
 -c, -m ╡б╟╜д╟ gfmd д╬е▌б╝е╚╚╓╣цдЄ╗╪─ъд╖д▐д╣бг
