--- a/gfarm_v2/trunk/man/man1/gfmdhost.1
+++ b/gfarm_v2/trunk/man/man1/gfmdhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFMDHOST" "1" "16 6æœˆ 2011" "Gfarm" ""
+.TH "GFMDHOST" "1" "31 July 2011" "Gfarm" ""
 
 .SH NAME
 gfmdhost \- Gfarm metadata server host maintenance command
@@ -22,13 +22,14 @@ gfmdhost \- Gfarm metadata server host maintenance command
 .SH "DESCRIPTION"
 .PP
 \fBgfmdhost\fR is used to display and maintain
-the information about the metadata server redundancy feature.
+the information about synchronous and asynchronous replicated metadata
+servers.
 \fBgfmdhost\fR has functions which can be selected by
--l¡¢-c, -m and -d options.
+-l, -c, -m and -d options.
 These functions are mutually exclusive, and only one option
 among them can be specified.
-If none of them is specified, gfmd host name will be listed as
-the default function of this command.
+If none of them is specified, registered metadata server (gfmd host)
+names will be listed.
 .SH "FUNCTIONS"
 .PP
 The functions of \fBgfmdhost\fR command are listed in following.
@@ -39,15 +40,15 @@ all the registered gfmd hosts are displayed
 in alphabetical order.
 .TP
 \fB-l\fR
-All registered gfmd hosts are listed with detail information.
-They are grouped by the clusters and ordered in alphabetical.
+All registered gfmd hosts are listed with detailed information.
+They are grouped by the clusters and ordered alphabetically.
 
-The detail information is displayed in the following order.
+The detailed information is displayed in the following order.
 
 \fBConnection State (+|-)\fR
 
-"+" means that the gfmd connected to the master gfmd.
-"-" means that the gfmd does not connected to the master gfmd.
+"+" means that the gfmd is connected to the master gfmd.
+"-" means that the gfmd is not connected to the master gfmd.
 This column for the master gfmd is always "+".
 
 \fBServer Type (master|slave)\fR
@@ -62,8 +63,10 @@ This column for the master is always "-".
 
 \fBConfigration of Master Candidate (c|m|s)\fR
 
-"m" means a default master gfmd, "c" means a master candidate one,
-and "s" means a gfmd as slave only.
+"m" means the default master gfmd, "c" means a master
+candidate that can be selected as a master gfmd,
+and "s" means a gfmd that is not a master candidate and only
+works for a slave gfmd.
 
 \fBCluster Name\fR
 
@@ -87,24 +90,33 @@ Prints usage.
 .SH "OPTIONS"
 .TP
 \fB-C \fIcluster-name\fB\fR
-For -c / -m functions, specifies a cluster name where the gfmd host
-belongs to.
-If it is not specified, the gfmd will belong to the default cluster.
+This option specifies a cluster name where the gfmd host
+belongs to.  If it is not specified, the default cluster is
+assumed.  This option is only available with -c or -m option.
+
+The cluster name means a group of synchronous replicated
+metadata servers.  That is, slave metadata servers in the same
+cluster with the master metadata server are synchronously
+replicated servers that can be changed to a master metadata
+server without any loss of metadata operations.  Other
+metadata servers are asynchronously replicated servers.
 .TP
 \fB-p \fIport-number\fB\fR
-For -c / -m functions, specifies a port number of the gfmd.
-If it is not specified, 601 as the default port number is used.
+This option specifies a port number of the gfmd.
+If it is not specified, 601 is assumed.
+This option is only available with -c or -m option.
 .TP
 \fB-t {m|c|s}\fR
-For -c / -m functions, specifies a configuration of master candidate.
-"m" means a default master, "c" means a master candidate and
-and "s" means a gfmd as slave-only.
-If it is not specified, "c" is used.
+This option specifies a configuration of master candidate.
+It is only available with -c or -m option.
+"m" means the default master, "c" means a master candidate and
+and "s" means a slave only gfmd.
+If it is not specified, "c" is assumed.
 The gfmd configured as the default master cannot be changed to
 a master candidate or slave-only directly.
-If the gfmd configured as non default master is set to the
-default master by "-t m", the previous default master changes to
-a master candidate at same time.
+If the gfmd that is not the default master is changed to the
+default master by "-t m", the original default master is
+changed to a master candidate at the same time.
 .TP
 \fB-P \fIpath\fB\fR
 This option specifies a pathname or a Gfarm URL to identify
