--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1213,6 +1213,22 @@ The "disable" setting corresponds to "noatime" setting in usual filesystem.
  -->
 
 <varlistentry>
+<term><token>client_file_bufsize</token> <parameter>bytes</parameter></term>
+<listitem>
+<para>This directive specifies the file buffer size in bytes used in
+  the Gfarm client library (libgfarm).  The default size is 1048568
+  bytes (= 1MiB - 8B).  The file buffer size should be less than the
+  default value not for deterioration of remote access performance for
+  version 2.5.0 or earlier.
+</para>
+<para>For example,</para>
+<literallayout>
+	client_file_bufsize 65536
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><token>profile </token><parameter>validity</parameter></term>
 <listitem>
 <para>When "enable" is specified, Gfarm outputs the profile information.
@@ -1423,6 +1439,7 @@ notation.</para>
 		&nbsp;&nbsp;&lt;log_level_statement&gt; |
 		&nbsp;&nbsp;&lt;log_message_verbose_level_statement&gt; |
 <!--		&nbsp;&nbsp;&lt;record_atime_statement&gt; | -->
+		&nbsp;&nbsp;&lt;client_file_bufsize_statement&gt; |
 		&nbsp;&nbsp;&lt;profile_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_server_list_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_replication_statement&gt; |
@@ -1516,6 +1533,7 @@ notation.</para>
 	&lt;no_file_system_node_timeout_statement&gt; ::= "no_file_system_node_timeout" &lt;number&gt;
 	&lt;gfmd_reconnection_timeout_statement&gt; ::= "gfmd_reconnection_timeout" &lt;number&gt;
 <!--	&lt;record_atime_statement&gt; ::= "record_atime" &lt;validity&gt; -->
+	&lt;client_file_bufsize_statement&gt; ::= "client_file_bufsize" &lt;size&gt;
 	&lt;profile_statement&gt; ::= "profile" &lt;validity&gt;
 	&lt;metadb_server_list_statement&gt; ::= "metadb_server_list" &lt;metadb_server_list_spec&gt;
 	&lt;metadb_server_list_spec&gt; ::=
